--- a/smartphone/index.html
+++ b/smartphone/index.html
@@ -5,7 +5,7 @@
                <div class="camera"></div>
                <div class="line-rec"></div>
            </div>
-           <img src="" alt="" height="535" width="312">
+           <img src="" alt="" >
         </div>
     </div>
   </div>
